# storyworth-project

./: .env.test  .gitignore  Procfile  README.md  manage.py  package-lock.json  pyproject.toml
storyworth/: asgi.py  settings.py  urls.py  wsgi.py
voice_recordings/: apps.py  conftest.py  models.py  urls.py  views.py
voice_recordings/migrations/: 0001_initial.py
voice_recordings/static/voice_recordings/: greeting.aifc
voice_recordings/templates/voice_recordings/: base.html  form.html  index.html  layout.html  recording.html
voice_recordings/tests/: test_end_to_end.py  test_views.py
