[project]
name = "storyworth-project"
version = "0.1.0"
description = "Storyworth Candidate Project"
authors = [
    {name = "Omar Khan", email = "omar.bartokhan@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
    "twilio>=9.7.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest-django>=4.11.1",
    "pytest-dotenv>=0.5.2",
    "pytest-playwright>=0.7.0",
    "ruff>=0.12.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "storyworth.settings"
env_files = [".env.test"]
